[gd_scene load_steps=6 format=3 uid="uid://36e8avus5emv"]

[ext_resource type="Script" uid="uid://cbkogvyla2vb" path="res://scenes/Root/root.gd" id="1_squjo"]
[ext_resource type="Texture2D" uid="uid://cprgpf8wwqwo8" path="res://assets/GameBg.png" id="2_q8lqm"]
[ext_resource type="PackedScene" uid="uid://ccyc1x3plrqid" path="res://scenes/Paddle/paddle.tscn" id="3_20qmg"]
[ext_resource type="AudioStream" uid="uid://c1m53t3kagbbf" path="res://assets/bgm_action_5.mp3" id="4_squjo"]
[ext_resource type="AudioStream" uid="uid://dfp6orsrkqkx3" path="res://assets/spell1_0.wav" id="5_q8lqm"]

[node name="Root" type="Node2D"]
script = ExtResource("1_squjo")

[node name="GameBg" type="Sprite2D" parent="."]
position = Vector2(578, 328)
scale = Vector2(0.621875, 0.625926)
texture = ExtResource("2_q8lqm")

[node name="Paddle" parent="." instance=ExtResource("3_20qmg")]
position = Vector2(570, 582)
scale = Vector2(0.621875, 0.625926)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_squjo")
volume_db = -20.0
autoplay = true
parameters/looping = true

[node name="Score_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_q8lqm")
volume_db = -12.0

[node name="Score_Label" type="Label" parent="."]
offset_left = 43.0
offset_top = 18.0
offset_right = 132.0
offset_bottom = 85.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0701439, 0.307947, 1, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 48
text = "000"

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
